# fastapi-react-backend-management

./: .gitignore  DEMO_REMOVAL_GUIDE.md  PROJECT_STATUS.md  README.md  SYSTEM_FIX_SUMMARY.md  UI_PREMIUM_UPGRADE.md  UI_UPGRADE_SUMMARY.md  design.md  requirements.md  tasks.md  test_system.py
backend/: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt  simple_init.py  test_basic.py
backend/alembic/: env.py
backend/app/: __init__.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/dependencies/: __init__.py  auth.py  database.py  permissions.py
backend/app/models/: associations.py  base.py  department.py  permission.py  position.py  role.py  user.py
backend/app/modules/auth/: router.py  schemas.py  service.py
backend/app/modules/profile/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/system/: router.py  schemas.py  service.py
backend/app/schemas/: __init__.py  common.py  permission.py  role.py  user.py
backend/scripts/: demo_data.py  initial_data.py
design/: design.md  requirements.md  tasks.md
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/hooks/: useAuth.ts  useSystem.ts
frontend/src/services/: auth.ts  profile.ts  system.ts
frontend/src/stores/: auth.ts  theme.ts  ui.ts
frontend/src/types/: api.ts  auth.ts  system.ts
(+17 files in other folders)
